--- a/index.html
+++ b/index.html
@@ -38,17 +38,32 @@
                     <span class="b-title-2">Group of Architects</span> 
                 </h2>
                 <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn-primary">Explore more</button>
+                <button class="btn-primary hedding-btn">Explore more</button>
             </div>
             <div class="banner-image">
                 <img src="images/banner.png" alt="">
             </div>
         </div>
     </header>
-    <main>
-        <section>
+    <!------------------
+    header container end
+    --------------------->
+
+    <!-------------------
+    main container start 
+    -------------------->
+    <main class="main-container">
+        <section class="main-content-section">
+            <article class="image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </article>
             <article>
-                
+                <h3 class="main-content-title"><span class="main-title-1">Quick list</span><span class="main-title-2"> of Our</span><span class="main-title-3"> Features</span></h3>
+                <p class="main-content-descrption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <buttom class="btn-primary btn-secoundary">Explore more</buttom>
             </article>
         </section>
     </main>
