--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <main class="main-container">
         <section class="main-content-section">
             <article class="image-container">
-                <img src="images/team1.png" alt="">
+                <img src="images/team1.png"alt="">
                 <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
+                <img src="images/team3.png"alt="">
+                <img src="images/team4.png"alt="">
             </article>
             <article>
                 <h3 class="main-content-title"><span class="main-title-1">Quick list</span><span class="main-title-2"> of Our</span><span class="main-title-3"> Features</span></h3>
@@ -165,8 +165,18 @@
                 <img src="images/sponsors/telerama.png" alt="">
             </article>
         </section>
+        <section>
+            <article class="join-content">
+                <h2 class="join-content-title">Join with us</h2>
+                <form class="form-contecnt">
+                    <input type="email" placeholder="your email" required>
+                    <input type="password" placeholder="your password" required>
+                    <input type="submit" value="submit" class="btn-primary">
+                </form>
+            </article>
+        </section>
     </main>
-    <footer>
+    <footer class="footer-container">
         <p class="footer-section">All rights reserved copyright@2023 startup landing page design</p>
     </footer> 
 </body>
